<resources>
    <string name="app_name">Memo</string>
    <string name="button_addMemo">Add Contact</string>
    <string name="hint_memoTitle">Name</string>
    <string name="hint_memoDescription">Mobile Number</string>
    <string name="hint_memoAddress">Address</string>
    <string name="menu_addMemo">Add</string>
    <string name="menu_cancelMemo">Cancel</string>
    <string name="menu_deleteMemo">Delete</string>
    <string name="enter_memo_title">Please enter a Contact Name </string>
    <string name="save_memo">Save Contact </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_memo_image">Select contacts image</string>
    <string name="change_memo_image">Change Image</string>
    <string name="memo_image">contact image</string>
    <string name="button_start">LogIn</string>
    <string name="hint_dateOfBirth">Date Of Birth</string>
    <string name="hint_prescriptionDate">Prescription Date</string>

    <string name="hint_logType">Therapy Assigned</string>
    <string name="hint_logDescription">Description of Condition</string>
    <string name="hint_prescription">Prescription Assigned</string>

    <string name="action_home">Home</string>
    <string name="action_detailed_log">Detailed Logs</string>
    <string name="action_search">Search</string>
    <string name="button_addLog">Add Log</string>
    <string name="hint_logDetails">Log Details</string>

    <string-array name="therapy_assigned">
        <item>Cognitive Therapy</item>
        <item>Behavioral Therapy</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>