<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MemoActivityFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:elevation="0dip">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:theme="@style/MyToolbar">
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/memoImage"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    app:srcCompat="@drawable/contact_icon" />

                <EditText
                    android:id="@+id/memoTitleAdd"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/hint_memoTitle"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/memoDescriptionAdd"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/hint_memoDescription"
                    android:inputType="phone"
                    android:maxLength="13"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/memoAddressAdd"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/hint_memoAddress"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textSize="14sp" />



                <DatePicker
                    android:id="@+id/date_Picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:calendarViewShown="false"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_dateOfBirth"
                    android:datePickerMode="spinner" />

                <EditText
                    android:id="@+id/type"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/hint_logType"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/logDescription"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/hint_logDescription"
                    android:inputType="text"
                    android:maxLength="325"
                    android:maxLines="14"
                    android:padding="8dp"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/prescription"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/hint_prescription"
                    android:inputType="text"
                    android:maxLength="125"
                    android:maxLines="5"
                    android:padding="8dp"
                    android:textSize="14sp" />

                <DatePicker
                    android:id="@+id/dateP_Picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:calendarViewShown="false"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_prescriptionDate"
                    android:datePickerMode="spinner" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="216dp"
                    android:orientation="horizontal"
                    android:paddingTop="8dp">


                    <Button
                        android:id="@+id/btnAdd"
                        android:layout_width="168dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:background="@color/design_default_color_secondary_variant"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:stateListAnimator="@null"
                        android:text="@string/button_addMemo"
                        android:textColor="@color/design_default_color_on_primary"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/chooseImage"
                        android:layout_width="184dp"
                        android:layout_height="49dp"
                        android:layout_margin="16dp"
                        android:background="@color/design_default_color_secondary_variant"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/button_addImage"
                        android:textColor="@color/design_default_color_on_primary"
                        android:textSize="16sp" />

                </LinearLayout>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" />
                </ScrollView>


            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</FrameLayout>